--- a/pacoteDownload-Exercicios/Desafios/estilo/style.css
+++ b/pacoteDownload-Exercicios/Desafios/estilo/style.css
@@ -32,20 +32,49 @@ body {
 }
 
 header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     background-color: var(--cor4);
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
 }
 
 header > h1 {
     color: white;
     font-family: var(--font-destaque);
+    margin-bottom: 20px;
+    font-size: 3em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.521);
 }
 
-header p {
+header > p {
+    font-family: var(--font-padrao);
+    font-size: 1.2em;
     color: white;
+    max-width: 500px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.521);
 }
 
 nav {
     background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.226);
+}
+
+nav > a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: 0.5s;
+}
+
+nav > a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
 }
 
 main {
