--- a/pacoteDownload-Exercicios/Desafios/estilo/style.css
+++ b/pacoteDownload-Exercicios/Desafios/estilo/style.css
@@ -31,6 +31,10 @@ body {
     font-family: var(--font-padrao);
 }
 
+a.externo::after {
+    content: '\1F517';
+}
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     background-color: var(--cor4);
@@ -138,7 +142,42 @@ main a:hover {
     color: var(--cor4);
 }
 
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.281);
+}
+
+aside > ul {
+    list-style-type: '\✔\00A0️';
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
 footer {
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer > p > a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
 }
