--- a/pacoteDownload-Exercicios/Desafios/estilo/style.css
+++ b/pacoteDownload-Exercicios/Desafios/estilo/style.css
@@ -46,6 +46,7 @@ header {
 header > h1 {
     color: white;
     font-family: var(--font-destaque);
+    font-weight: normal;
     margin-bottom: 20px;
     font-size: 3em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.521);
@@ -59,6 +60,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.521);
 }
 
@@ -69,7 +71,7 @@ nav {
 }
 
 nav > a {
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -79,6 +81,7 @@ nav > a {
 nav > a:hover {
     background-color: var(--cor3);
     color: var(--cor5);
+    border-radius: 1.5px;
 }
 
 main {
@@ -106,10 +109,13 @@ main img.pequena {
 main h1 {
     color: var(--cor5);
     font-family: var(--font-android);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 
 main h2 {
     font-family: var(--font-android);
+    font-weight: normal;
     color: var(--cor4);
     font-size: 1.3em;
     background-image: linear-gradient(to right, var(--cor1), transparent);
@@ -140,6 +146,22 @@ main a {
 main a:hover {
     text-decoration: underline;
     color: var(--cor4);
+}
+
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 59%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 aside {
